k8s_deploy/volume.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: regatta
