k8s_deploy/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: regatta-service
  namespace: regatta
spec:
  ports:
    - name: http
      port: 8888
      targetPort: 8888
  selector:
    app: regatta-service
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regatta-deployment
  namespace: regatta
spec:
  selector:
    matchLabels:
      app: regatta-service
  template:
    metadata:
      labels:
        app: regatta-service
    spec:
      imagePullSecrets:
        - name: ghreg
      containers:
        - image: ghcr.io/manimaul/regatta:latest
          imagePullPolicy: Always
          name: regatta-service
          ports:
            - containerPort: 8888
              name: http
          resources:
            requests:
              cpu: 100m
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: regatta-gateway
  namespace: regatta
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - regatta.mxmariner.com
      tls:
        mode: SIMPLE
        #referenced Secret must exist in the namespace of the istio-ingressgateway
        credentialName: regatta-cert
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cyct-gateway
  namespace: regatta
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - racing.cyct.com
      tls:
        mode: SIMPLE
        #referenced Secret must exist in the namespace of the istio-ingressgateway
        credentialName: cyct-cert
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: regatta-virt-svc
  namespace: regatta
spec:
  hosts:
    - regatta.mxmariner.com
    - racing.cyct.com
  gateways:
    - regatta-gateway
    - cyct-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: regatta-service
            port:
              number: 8888
---
